// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.qf2icr10,html.qf2icr10 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="_1efnt1q0 _1c29ox618 _1c29ox61b">
+        <div class="natd190 qf2icr8n qf2icr7j qf2icrav qf2icr9r qf2icr5f qf2icr67 qf2icri7 qf2icr4j qf2icr4c _1c29ox618 _1c29ox61b qf2icr33 qf2icr36">
+          <span class="natd190 qf2icr4z _1c29ox60 _1c29ox61 _1c29ox621 mowtpn4 _1c29ox6d">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .natd190 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] .natd190 {
  outline: none;
}
.natd191 {
  display: block;
}
.natd192 {
  line-height: 1;
}
.natd193 {
  list-style: none;
}
.natd194 {
  quotes: none;
}
.natd194:after,
.natd194:before {
  content: "";
}
.natd195 {
  border-collapse: collapse;
  border-spacing: 0;
}
.natd196 {
  -webkit-appearance: none;
  appearance: none;
}
.natd197 {
  background-color: transparent;
}
.natd199 {
  color: inherit;
}
.natd19a:disabled {
  opacity: 1;
}
.natd19a::-ms-expand {
  display: none;
}
.natd19c[type="number"] {
  -moz-appearance: textfield;
}
.natd19c[type="number"]::-webkit-inner-spin-button,
.natd19c[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.natd19c::-ms-clear {
  display: none;
}
.natd19c::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.natd19f {
  color: inherit;
  text-decoration: none;
}
.qf2icr0 {
  overflow: hidden;
}
.qf2icr1 {
  overflow: scroll;
}
.qf2icr2 {
  overflow: visible;
}
.qf2icr3 {
  overflow: auto;
}
.qf2icr4 {
  -webkit-user-select: none;
  user-select: none;
}
.qf2icr5 {
  outline: none;
}
.qf2icr6 {
  opacity: 0;
}
.qf2icr7 {
  z-index: 0;
}
.qf2icr8 {
  z-index: 1;
}
.qf2icr9 {
  z-index: 2;
}
.qf2icra {
  z-index: 90;
}
.qf2icrb {
  z-index: 100;
}
.qf2icrc {
  z-index: 200;
}
.qf2icrd {
  z-index: 290;
}
.qf2icre {
  z-index: 300;
}
.qf2icrf {
  z-index: 400;
}
.qf2icrg {
  cursor: default;
}
.qf2icrh {
  cursor: pointer;
}
.qf2icri {
  pointer-events: none;
}
.qf2icrj {
  top: 0;
}
.qf2icrk {
  bottom: 0;
}
.qf2icrl {
  left: 0;
}
.qf2icrm {
  right: 0;
}
.qf2icrn {
  height: 100%;
}
.qf2icro {
  height: var(--_1n6oqg9);
}
.qf2icrp {
  width: 100%;
}
.qf2icrq {
  width: var(--_1n6oqg9);
}
.qf2icrr {
  min-width: 0;
}
.qf2icrs {
  max-width: var(--_1n6oqg11);
}
.qf2icrt {
  max-width: var(--_1n6oqg12);
}
.qf2icru {
  max-width: var(--_1n6oqg13);
}
.qf2icrv {
  max-width: var(--_1n6oqg14);
}
.qf2icrw {
  max-width: -moz-fit-content;
  max-width: fit-content;
}
.qf2icrx {
  transition: var(--_1n6oqg5i);
}
.qf2icry {
  transition: var(--_1n6oqg5j);
}
.qf2icrz:active {
  transform: var(--_1n6oqg5k);
}
html.qf2icr10 .qf2icr12,
html:not(.qf2icr10) .qf2icr11 {
  background: var(--_1n6oqg1t);
}
html.qf2icr10 .qf2icr14,
html:not(.qf2icr10) .qf2icr13 {
  background: var(--_1n6oqg1u);
}
html.qf2icr10 .qf2icr16,
html:not(.qf2icr10) .qf2icr15 {
  background: var(--_1n6oqg1v);
}
html.qf2icr10 .qf2icr18,
html:not(.qf2icr10) .qf2icr17 {
  background: var(--_1n6oqg1w);
}
html.qf2icr10 .qf2icr1a,
html:not(.qf2icr10) .qf2icr19 {
  background: var(--_1n6oqg1x);
}
html.qf2icr10 .qf2icr1c,
html:not(.qf2icr10) .qf2icr1b {
  background: var(--_1n6oqg1y);
}
html.qf2icr10 .qf2icr1e,
html:not(.qf2icr10) .qf2icr1d {
  background: var(--_1n6oqg1z);
}
html.qf2icr10 .qf2icr1g,
html:not(.qf2icr10) .qf2icr1f {
  background: var(--_1n6oqg20);
}
html.qf2icr10 .qf2icr1i,
html:not(.qf2icr10) .qf2icr1h {
  background: var(--_1n6oqg21);
}
html.qf2icr10 .qf2icr1k,
html:not(.qf2icr10) .qf2icr1j {
  background: var(--_1n6oqg22);
}
html.qf2icr10 .qf2icr1m,
html:not(.qf2icr10) .qf2icr1l {
  background: var(--_1n6oqg23);
}
html.qf2icr10 .qf2icr1o,
html:not(.qf2icr10) .qf2icr1n {
  background: var(--_1n6oqg24);
}
html.qf2icr10 .qf2icr1q,
html:not(.qf2icr10) .qf2icr1p {
  background: var(--_1n6oqg25);
}
html.qf2icr10 .qf2icr1s,
html:not(.qf2icr10) .qf2icr1r {
  background: var(--_1n6oqg26);
}
html.qf2icr10 .qf2icr1u,
html:not(.qf2icr10) .qf2icr1t {
  background: var(--_1n6oqg27);
}
html.qf2icr10 .qf2icr1w,
html:not(.qf2icr10) .qf2icr1v {
  background: var(--_1n6oqg28);
}
html.qf2icr10 .qf2icr1y,
html:not(.qf2icr10) .qf2icr1x {
  background: var(--_1n6oqg29);
}
html.qf2icr10 .qf2icr20,
html:not(.qf2icr10) .qf2icr1z {
  background: var(--_1n6oqg2a);
}
html.qf2icr10 .qf2icr22,
html:not(.qf2icr10) .qf2icr21 {
  background: var(--_1n6oqg2b);
}
html.qf2icr10 .qf2icr24,
html:not(.qf2icr10) .qf2icr23 {
  background: var(--_1n6oqg2c);
}
html.qf2icr10 .qf2icr26,
html:not(.qf2icr10) .qf2icr25 {
  background: var(--_1n6oqg2d);
}
html.qf2icr10 .qf2icr28,
html:not(.qf2icr10) .qf2icr27 {
  background: var(--_1n6oqg2e);
}
html.qf2icr10 .qf2icr2a,
html:not(.qf2icr10) .qf2icr29 {
  background: var(--_1n6oqg2f);
}
html.qf2icr10 .qf2icr2c,
html:not(.qf2icr10) .qf2icr2b {
  background: var(--_1n6oqg2g);
}
html.qf2icr10 .qf2icr2e,
html:not(.qf2icr10) .qf2icr2d {
  background: var(--_1n6oqg2h);
}
html.qf2icr10 .qf2icr2g,
html:not(.qf2icr10) .qf2icr2f {
  background: var(--_1n6oqg2i);
}
html.qf2icr10 .qf2icr2i,
html:not(.qf2icr10) .qf2icr2h {
  background: var(--_1n6oqg2j);
}
html.qf2icr10 .qf2icr2k,
html:not(.qf2icr10) .qf2icr2j {
  background: var(--_1n6oqg2k);
}
html.qf2icr10 .qf2icr2m,
html:not(.qf2icr10) .qf2icr2l {
  background: var(--_1n6oqg2l);
}
html.qf2icr10 .qf2icr2o,
html:not(.qf2icr10) .qf2icr2n {
  background: var(--_1n6oqg2m);
}
html.qf2icr10 .qf2icr2q,
html:not(.qf2icr10) .qf2icr2p {
  background: var(--_1n6oqg2n);
}
html.qf2icr10 .qf2icr2s,
html:not(.qf2icr10) .qf2icr2r {
  background: var(--_1n6oqg2o);
}
html.qf2icr10 .qf2icr2u,
html:not(.qf2icr10) .qf2icr2t {
  background: var(--_1n6oqg2p);
}
html.qf2icr10 .qf2icr2w,
html:not(.qf2icr10) .qf2icr2v {
  background: var(--_1n6oqg2q);
}
html.qf2icr10 .qf2icr2y,
html:not(.qf2icr10) .qf2icr2x {
  background: var(--_1n6oqg2r);
}
html.qf2icr10 .qf2icr30,
html:not(.qf2icr10) .qf2icr2z {
  background: var(--_1n6oqg2s);
}
html.qf2icr10 .qf2icr32,
html:not(.qf2icr10) .qf2icr31 {
  background: var(--_1n6oqg2t);
}
html.qf2icr10 .qf2icr34,
html:not(.qf2icr10) .qf2icr33 {
  background: var(--_1n6oqg2u);
}
html.qf2icr10 .qf2icr36,
html:not(.qf2icr10) .qf2icr35 {
  background: var(--_1n6oqg2v);
}
html.qf2icr10 .qf2icr38,
html:not(.qf2icr10) .qf2icr37 {
  box-shadow: var(--_1n6oqg5l);
}
html.qf2icr10 .qf2icr3a,
html:not(.qf2icr10) .qf2icr39 {
  box-shadow: var(--_1n6oqg5m);
}
html.qf2icr10 .qf2icr3c,
html:not(.qf2icr10) .qf2icr3b {
  box-shadow: var(--_1n6oqg5n);
}
html.qf2icr10 .qf2icr3e,
html:not(.qf2icr10) .qf2icr3d {
  box-shadow: inset 0 0 0 var(--_1n6oqgy) var(--_1n6oqgf);
}
html.qf2icr10 .qf2icr3g,
html:not(.qf2icr10) .qf2icr3f {
  box-shadow: inset 0 0 0 var(--_1n6oqgy) var(--_1n6oqgg);
}
html.qf2icr10 .qf2icr3i,
html:not(.qf2icr10) .qf2icr3h {
  box-shadow: inset 0 0 0 var(--_1n6oqgz) var(--_1n6oqgf);
}
html.qf2icr10 .qf2icr3k,
html:not(.qf2icr10) .qf2icr3j {
  box-shadow: inset 0 0 0 var(--_1n6oqgz) var(--_1n6oqgg);
}
html.qf2icr10 .qf2icr3m,
html:not(.qf2icr10) .qf2icr3l {
  box-shadow: inset 0 0 0 var(--_1n6oqgy) var(--_1n6oqgh);
}
html.qf2icr10 .qf2icr3o,
html:not(.qf2icr10) .qf2icr3n {
  box-shadow: inset 0 0 0 var(--_1n6oqgy) var(--_1n6oqgi);
}
html.qf2icr10 .qf2icr3q,
html:not(.qf2icr10) .qf2icr3p {
  box-shadow: inset 0 0 0 var(--_1n6oqgy) var(--_1n6oqgj);
}
html.qf2icr10 .qf2icr3s,
html:not(.qf2icr10) .qf2icr3r {
  box-shadow: inset 0 0 0 var(--_1n6oqgz) var(--_1n6oqgj);
}
html.qf2icr10 .qf2icr3u,
html:not(.qf2icr10) .qf2icr3t {
  box-shadow: inset 0 0 0 var(--_1n6oqgy) var(--_1n6oqgk);
}
html.qf2icr10 .qf2icr3w,
html:not(.qf2icr10) .qf2icr3v {
  box-shadow: inset 0 0 0 var(--_1n6oqgz) var(--_1n6oqgk);
}
html.qf2icr10 .qf2icr3y,
html:not(.qf2icr10) .qf2icr3x {
  box-shadow: inset 0 0 0 var(--_1n6oqgy) var(--_1n6oqgl);
}
html.qf2icr10 .qf2icr40,
html:not(.qf2icr10) .qf2icr3z {
  box-shadow: inset 0 0 0 var(--_1n6oqgy) var(--_1n6oqgn);
}
html.qf2icr10 .qf2icr42,
html:not(.qf2icr10) .qf2icr41 {
  box-shadow: inset 0 0 0 var(--_1n6oqgz) var(--_1n6oqgn);
}
html.qf2icr10 .qf2icr44,
html:not(.qf2icr10) .qf2icr43 {
  box-shadow: inset 0 0 0 var(--_1n6oqgy) var(--_1n6oqgo);
}
html.qf2icr10 .qf2icr46,
html:not(.qf2icr10) .qf2icr45 {
  box-shadow: inset 0 0 0 var(--_1n6oqgz) var(--_1n6oqgo);
}
html.qf2icr10 .qf2icr48,
html:not(.qf2icr10) .qf2icr47 {
  box-shadow: inset 0 0 0 var(--_1n6oqgy) var(--_1n6oqgp);
}
html.qf2icr10 .qf2icr4a,
html:not(.qf2icr10) .qf2icr49 {
  box-shadow: inset 0 0 0 var(--_1n6oqgy) var(--_1n6oqgq);
}
html.qf2icr10 .qf2icr4c,
html:not(.qf2icr10) .qf2icr4b {
  box-shadow: inset 0 0 0 var(--_1n6oqgy) var(--_1n6oqgr);
}
html.qf2icr10 .qf2icr4e,
html:not(.qf2icr10) .qf2icr4d {
  box-shadow: inset 0 0 0 var(--_1n6oqgz) var(--_1n6oqgr);
}
html.qf2icr10 .qf2icr4g,
html:not(.qf2icr10) .qf2icr4f {
  box-shadow: inset 0 0 0 var(--_1n6oqgy) var(--_1n6oqgs);
}
html.qf2icr10 .qf2icr4i,
html:not(.qf2icr10) .qf2icr4h {
  box-shadow: inset 0 0 0 var(--_1n6oqgz) var(--_1n6oqgs);
}
html.qf2icr10 .qf2icr4k,
html:not(.qf2icr10) .qf2icr4j {
  box-shadow: inset 0 0 0 var(--_1n6oqgy) var(--_1n6oqgt);
}
html.qf2icr10 .qf2icr4m,
html:not(.qf2icr10) .qf2icr4l {
  box-shadow: inset 0 0 0 var(--_1n6oqgy) var(--_1n6oqgu);
}
html.qf2icr10 .qf2icr4o,
html:not(.qf2icr10) .qf2icr4n {
  box-shadow: inset 0 0 0 var(--_1n6oqgy) var(--_1n6oqgv);
}
html.qf2icr10 .qf2icr4q,
html:not(.qf2icr10) .qf2icr4p {
  box-shadow: inset 0 0 0 var(--_1n6oqgy) var(--_1n6oqgw);
}
html.qf2icr10 .qf2icr4s,
html:not(.qf2icr10) .qf2icr4r {
  box-shadow: inset 0 0 0 var(--_1n6oqgy) var(--_1n6oqgx);
}
html.qf2icr10 .qf2icr4u,
html:not(.qf2icr10) .qf2icr4t {
  box-shadow: 0 0 0 var(--_1n6oqg10) var(--_1n6oqgm);
}
.qf2icr4v {
  display: none;
}
.qf2icr4z {
  display: block;
}
.qf2icr53 {
  display: inline;
}
.qf2icr57 {
  display: inline-block;
}
.qf2icr5b {
  display: flex;
}
.qf2icr5f {
  position: relative;
}
.qf2icr5j {
  position: absolute;
}
.qf2icr5n {
  position: fixed;
}
.qf2icr5r {
  border-radius: 0;
}
.qf2icr5v {
  border-radius: 9999px;
}
.qf2icr5z {
  border-radius: var(--_1n6oqgb);
}
.qf2icr63 {
  border-radius: var(--_1n6oqgc);
}
.qf2icr67 {
  border-radius: var(--_1n6oqgd);
}
.qf2icr6b {
  border-radius: var(--_1n6oqge);
}
.qf2icr6f {
  gap: var(--_1n6oqg0);
}
.qf2icr6j {
  gap: var(--_1n6oqg1);
}
.qf2icr6n {
  gap: var(--_1n6oqg2);
}
.qf2icr6r {
  gap: var(--_1n6oqg3);
}
.qf2icr6v {
  gap: var(--_1n6oqg4);
}
.qf2icr6z {
  gap: var(--_1n6oqg5);
}
.qf2icr73 {
  gap: var(--_1n6oqg6);
}
.qf2icr77 {
  gap: var(--_1n6oqg7);
}
.qf2icr7b {
  gap: var(--_1n6oqg8);
}
.qf2icr7f {
  gap: 0;
}
.qf2icr7j {
  padding-top: var(--_1n6oqg0);
}
.qf2icr7n {
  padding-top: var(--_1n6oqg1);
}
.qf2icr7r {
  padding-top: var(--_1n6oqg2);
}
.qf2icr7v {
  padding-top: var(--_1n6oqg3);
}
.qf2icr7z {
  padding-top: var(--_1n6oqg4);
}
.qf2icr83 {
  padding-top: var(--_1n6oqg5);
}
.qf2icr87 {
  padding-top: var(--_1n6oqg6);
}
.qf2icr8b {
  padding-top: var(--_1n6oqg7);
}
.qf2icr8f {
  padding-top: var(--_1n6oqg8);
}
.qf2icr8j {
  padding-top: 0;
}
.qf2icr8n {
  padding-bottom: var(--_1n6oqg0);
}
.qf2icr8r {
  padding-bottom: var(--_1n6oqg1);
}
.qf2icr8v {
  padding-bottom: var(--_1n6oqg2);
}
.qf2icr8z {
  padding-bottom: var(--_1n6oqg3);
}
.qf2icr93 {
  padding-bottom: var(--_1n6oqg4);
}
.qf2icr97 {
  padding-bottom: var(--_1n6oqg5);
}
.qf2icr9b {
  padding-bottom: var(--_1n6oqg6);
}
.qf2icr9f {
  padding-bottom: var(--_1n6oqg7);
}
.qf2icr9j {
  padding-bottom: var(--_1n6oqg8);
}
.qf2icr9n {
  padding-bottom: 0;
}
.qf2icr9r {
  padding-right: var(--_1n6oqg0);
}
.qf2icr9v {
  padding-right: var(--_1n6oqg1);
}
.qf2icr9z {
  padding-right: var(--_1n6oqg2);
}
.qf2icra3 {
  padding-right: var(--_1n6oqg3);
}
.qf2icra7 {
  padding-right: var(--_1n6oqg4);
}
.qf2icrab {
  padding-right: var(--_1n6oqg5);
}
.qf2icraf {
  padding-right: var(--_1n6oqg6);
}
.qf2icraj {
  padding-right: var(--_1n6oqg7);
}
.qf2icran {
  padding-right: var(--_1n6oqg8);
}
.qf2icrar {
  padding-right: 0;
}
.qf2icrav {
  padding-left: var(--_1n6oqg0);
}
.qf2icraz {
  padding-left: var(--_1n6oqg1);
}
.qf2icrb3 {
  padding-left: var(--_1n6oqg2);
}
.qf2icrb7 {
  padding-left: var(--_1n6oqg3);
}
.qf2icrbb {
  padding-left: var(--_1n6oqg4);
}
.qf2icrbf {
  padding-left: var(--_1n6oqg5);
}
.qf2icrbj {
  padding-left: var(--_1n6oqg6);
}
.qf2icrbn {
  padding-left: var(--_1n6oqg7);
}
.qf2icrbr {
  padding-left: var(--_1n6oqg8);
}
.qf2icrbv {
  padding-left: 0;
}
.qf2icrbz {
  margin-top: var(--_1n6oqg0);
}
.qf2icrc3 {
  margin-top: var(--_1n6oqg1);
}
.qf2icrc7 {
  margin-top: var(--_1n6oqg2);
}
.qf2icrcb {
  margin-top: var(--_1n6oqg3);
}
.qf2icrcf {
  margin-top: var(--_1n6oqg4);
}
.qf2icrcj {
  margin-top: var(--_1n6oqg5);
}
.qf2icrcn {
  margin-top: var(--_1n6oqg6);
}
.qf2icrcr {
  margin-top: var(--_1n6oqg7);
}
.qf2icrcv {
  margin-top: var(--_1n6oqg8);
}
.qf2icrcz {
  margin-top: 0;
}
.qf2icrd3 {
  margin-bottom: var(--_1n6oqg0);
}
.qf2icrd7 {
  margin-bottom: var(--_1n6oqg1);
}
.qf2icrdb {
  margin-bottom: var(--_1n6oqg2);
}
.qf2icrdf {
  margin-bottom: var(--_1n6oqg3);
}
.qf2icrdj {
  margin-bottom: var(--_1n6oqg4);
}
.qf2icrdn {
  margin-bottom: var(--_1n6oqg5);
}
.qf2icrdr {
  margin-bottom: var(--_1n6oqg6);
}
.qf2icrdv {
  margin-bottom: var(--_1n6oqg7);
}
.qf2icrdz {
  margin-bottom: var(--_1n6oqg8);
}
.qf2icre3 {
  margin-bottom: 0;
}
.qf2icre7 {
  margin-right: var(--_1n6oqg0);
}
.qf2icreb {
  margin-right: var(--_1n6oqg1);
}
.qf2icref {
  margin-right: var(--_1n6oqg2);
}
.qf2icrej {
  margin-right: var(--_1n6oqg3);
}
.qf2icren {
  margin-right: var(--_1n6oqg4);
}
.qf2icrer {
  margin-right: var(--_1n6oqg5);
}
.qf2icrev {
  margin-right: var(--_1n6oqg6);
}
.qf2icrez {
  margin-right: var(--_1n6oqg7);
}
.qf2icrf3 {
  margin-right: var(--_1n6oqg8);
}
.qf2icrf7 {
  margin-right: 0;
}
.qf2icrfb {
  margin-left: var(--_1n6oqg0);
}
.qf2icrff {
  margin-left: var(--_1n6oqg1);
}
.qf2icrfj {
  margin-left: var(--_1n6oqg2);
}
.qf2icrfn {
  margin-left: var(--_1n6oqg3);
}
.qf2icrfr {
  margin-left: var(--_1n6oqg4);
}
.qf2icrfv {
  margin-left: var(--_1n6oqg5);
}
.qf2icrfz {
  margin-left: var(--_1n6oqg6);
}
.qf2icrg3 {
  margin-left: var(--_1n6oqg7);
}
.qf2icrg7 {
  margin-left: var(--_1n6oqg8);
}
.qf2icrgb {
  margin-left: 0;
}
.qf2icrgf {
  align-items: flex-start;
}
.qf2icrgj {
  align-items: center;
}
.qf2icrgn {
  align-items: flex-end;
}
.qf2icrgr {
  justify-content: flex-start;
}
.qf2icrgv {
  justify-content: center;
}
.qf2icrgz {
  justify-content: flex-end;
}
.qf2icrh3 {
  justify-content: space-between;
}
.qf2icrh7 {
  flex-direction: row;
}
.qf2icrhb {
  flex-direction: row-reverse;
}
.qf2icrhf {
  flex-direction: column;
}
.qf2icrhj {
  flex-direction: column-reverse;
}
.qf2icrhn {
  flex-wrap: wrap;
}
.qf2icrhr {
  flex-wrap: nowrap;
}
.qf2icrhv {
  flex-shrink: 0;
}
.qf2icrhz {
  flex-grow: 0;
}
.qf2icri3 {
  flex-grow: 1;
}
.qf2icri7 {
  text-align: left;
}
.qf2icrib {
  text-align: center;
}
.qf2icrif {
  text-align: right;
}
@media screen and (min-width: 740px) {
  .qf2icr4w {
    display: none;
  }
  .qf2icr50 {
    display: block;
  }
  .qf2icr54 {
    display: inline;
  }
  .qf2icr58 {
    display: inline-block;
  }
  .qf2icr5c {
    display: flex;
  }
  .qf2icr5g {
    position: relative;
  }
  .qf2icr5k {
    position: absolute;
  }
  .qf2icr5o {
    position: fixed;
  }
  .qf2icr5s {
    border-radius: 0;
  }
  .qf2icr5w {
    border-radius: 9999px;
  }
  .qf2icr60 {
    border-radius: var(--_1n6oqgb);
  }
  .qf2icr64 {
    border-radius: var(--_1n6oqgc);
  }
  .qf2icr68 {
    border-radius: var(--_1n6oqgd);
  }
  .qf2icr6c {
    border-radius: var(--_1n6oqge);
  }
  .qf2icr6g {
    gap: var(--_1n6oqg0);
  }
  .qf2icr6k {
    gap: var(--_1n6oqg1);
  }
  .qf2icr6o {
    gap: var(--_1n6oqg2);
  }
  .qf2icr6s {
    gap: var(--_1n6oqg3);
  }
  .qf2icr6w {
    gap: var(--_1n6oqg4);
  }
  .qf2icr70 {
    gap: var(--_1n6oqg5);
  }
  .qf2icr74 {
    gap: var(--_1n6oqg6);
  }
  .qf2icr78 {
    gap: var(--_1n6oqg7);
  }
  .qf2icr7c {
    gap: var(--_1n6oqg8);
  }
  .qf2icr7g {
    gap: 0;
  }
  .qf2icr7k {
    padding-top: var(--_1n6oqg0);
  }
  .qf2icr7o {
    padding-top: var(--_1n6oqg1);
  }
  .qf2icr7s {
    padding-top: var(--_1n6oqg2);
  }
  .qf2icr7w {
    padding-top: var(--_1n6oqg3);
  }
  .qf2icr80 {
    padding-top: var(--_1n6oqg4);
  }
  .qf2icr84 {
    padding-top: var(--_1n6oqg5);
  }
  .qf2icr88 {
    padding-top: var(--_1n6oqg6);
  }
  .qf2icr8c {
    padding-top: var(--_1n6oqg7);
  }
  .qf2icr8g {
    padding-top: var(--_1n6oqg8);
  }
  .qf2icr8k {
    padding-top: 0;
  }
  .qf2icr8o {
    padding-bottom: var(--_1n6oqg0);
  }
  .qf2icr8s {
    padding-bottom: var(--_1n6oqg1);
  }
  .qf2icr8w {
    padding-bottom: var(--_1n6oqg2);
  }
  .qf2icr90 {
    padding-bottom: var(--_1n6oqg3);
  }
  .qf2icr94 {
    padding-bottom: var(--_1n6oqg4);
  }
  .qf2icr98 {
    padding-bottom: var(--_1n6oqg5);
  }
  .qf2icr9c {
    padding-bottom: var(--_1n6oqg6);
  }
  .qf2icr9g {
    padding-bottom: var(--_1n6oqg7);
  }
  .qf2icr9k {
    padding-bottom: var(--_1n6oqg8);
  }
  .qf2icr9o {
    padding-bottom: 0;
  }
  .qf2icr9s {
    padding-right: var(--_1n6oqg0);
  }
  .qf2icr9w {
    padding-right: var(--_1n6oqg1);
  }
  .qf2icra0 {
    padding-right: var(--_1n6oqg2);
  }
  .qf2icra4 {
    padding-right: var(--_1n6oqg3);
  }
  .qf2icra8 {
    padding-right: var(--_1n6oqg4);
  }
  .qf2icrac {
    padding-right: var(--_1n6oqg5);
  }
  .qf2icrag {
    padding-right: var(--_1n6oqg6);
  }
  .qf2icrak {
    padding-right: var(--_1n6oqg7);
  }
  .qf2icrao {
    padding-right: var(--_1n6oqg8);
  }
  .qf2icras {
    padding-right: 0;
  }
  .qf2icraw {
    padding-left: var(--_1n6oqg0);
  }
  .qf2icrb0 {
    padding-left: var(--_1n6oqg1);
  }
  .qf2icrb4 {
    padding-left: var(--_1n6oqg2);
  }
  .qf2icrb8 {
    padding-left: var(--_1n6oqg3);
  }
  .qf2icrbc {
    padding-left: var(--_1n6oqg4);
  }
  .qf2icrbg {
    padding-left: var(--_1n6oqg5);
  }
  .qf2icrbk {
    padding-left: var(--_1n6oqg6);
  }
  .qf2icrbo {
    padding-left: var(--_1n6oqg7);
  }
  .qf2icrbs {
    padding-left: var(--_1n6oqg8);
  }
  .qf2icrbw {
    padding-left: 0;
  }
  .qf2icrc0 {
    margin-top: var(--_1n6oqg0);
  }
  .qf2icrc4 {
    margin-top: var(--_1n6oqg1);
  }
  .qf2icrc8 {
    margin-top: var(--_1n6oqg2);
  }
  .qf2icrcc {
    margin-top: var(--_1n6oqg3);
  }
  .qf2icrcg {
    margin-top: var(--_1n6oqg4);
  }
  .qf2icrck {
    margin-top: var(--_1n6oqg5);
  }
  .qf2icrco {
    margin-top: var(--_1n6oqg6);
  }
  .qf2icrcs {
    margin-top: var(--_1n6oqg7);
  }
  .qf2icrcw {
    margin-top: var(--_1n6oqg8);
  }
  .qf2icrd0 {
    margin-top: 0;
  }
  .qf2icrd4 {
    margin-bottom: var(--_1n6oqg0);
  }
  .qf2icrd8 {
    margin-bottom: var(--_1n6oqg1);
  }
  .qf2icrdc {
    margin-bottom: var(--_1n6oqg2);
  }
  .qf2icrdg {
    margin-bottom: var(--_1n6oqg3);
  }
  .qf2icrdk {
    margin-bottom: var(--_1n6oqg4);
  }
  .qf2icrdo {
    margin-bottom: var(--_1n6oqg5);
  }
  .qf2icrds {
    margin-bottom: var(--_1n6oqg6);
  }
  .qf2icrdw {
    margin-bottom: var(--_1n6oqg7);
  }
  .qf2icre0 {
    margin-bottom: var(--_1n6oqg8);
  }
  .qf2icre4 {
    margin-bottom: 0;
  }
  .qf2icre8 {
    margin-right: var(--_1n6oqg0);
  }
  .qf2icrec {
    margin-right: var(--_1n6oqg1);
  }
  .qf2icreg {
    margin-right: var(--_1n6oqg2);
  }
  .qf2icrek {
    margin-right: var(--_1n6oqg3);
  }
  .qf2icreo {
    margin-right: var(--_1n6oqg4);
  }
  .qf2icres {
    margin-right: var(--_1n6oqg5);
  }
  .qf2icrew {
    margin-right: var(--_1n6oqg6);
  }
  .qf2icrf0 {
    margin-right: var(--_1n6oqg7);
  }
  .qf2icrf4 {
    margin-right: var(--_1n6oqg8);
  }
  .qf2icrf8 {
    margin-right: 0;
  }
  .qf2icrfc {
    margin-left: var(--_1n6oqg0);
  }
  .qf2icrfg {
    margin-left: var(--_1n6oqg1);
  }
  .qf2icrfk {
    margin-left: var(--_1n6oqg2);
  }
  .qf2icrfo {
    margin-left: var(--_1n6oqg3);
  }
  .qf2icrfs {
    margin-left: var(--_1n6oqg4);
  }
  .qf2icrfw {
    margin-left: var(--_1n6oqg5);
  }
  .qf2icrg0 {
    margin-left: var(--_1n6oqg6);
  }
  .qf2icrg4 {
    margin-left: var(--_1n6oqg7);
  }
  .qf2icrg8 {
    margin-left: var(--_1n6oqg8);
  }
  .qf2icrgc {
    margin-left: 0;
  }
  .qf2icrgg {
    align-items: flex-start;
  }
  .qf2icrgk {
    align-items: center;
  }
  .qf2icrgo {
    align-items: flex-end;
  }
  .qf2icrgs {
    justify-content: flex-start;
  }
  .qf2icrgw {
    justify-content: center;
  }
  .qf2icrh0 {
    justify-content: flex-end;
  }
  .qf2icrh4 {
    justify-content: space-between;
  }
  .qf2icrh8 {
    flex-direction: row;
  }
  .qf2icrhc {
    flex-direction: row-reverse;
  }
  .qf2icrhg {
    flex-direction: column;
  }
  .qf2icrhk {
    flex-direction: column-reverse;
  }
  .qf2icrho {
    flex-wrap: wrap;
  }
  .qf2icrhs {
    flex-wrap: nowrap;
  }
  .qf2icrhw {
    flex-shrink: 0;
  }
  .qf2icri0 {
    flex-grow: 0;
  }
  .qf2icri4 {
    flex-grow: 1;
  }
  .qf2icri8 {
    text-align: left;
  }
  .qf2icric {
    text-align: center;
  }
  .qf2icrig {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  .qf2icr4x {
    display: none;
  }
  .qf2icr51 {
    display: block;
  }
  .qf2icr55 {
    display: inline;
  }
  .qf2icr59 {
    display: inline-block;
  }
  .qf2icr5d {
    display: flex;
  }
  .qf2icr5h {
    position: relative;
  }
  .qf2icr5l {
    position: absolute;
  }
  .qf2icr5p {
    position: fixed;
  }
  .qf2icr5t {
    border-radius: 0;
  }
  .qf2icr5x {
    border-radius: 9999px;
  }
  .qf2icr61 {
    border-radius: var(--_1n6oqgb);
  }
  .qf2icr65 {
    border-radius: var(--_1n6oqgc);
  }
  .qf2icr69 {
    border-radius: var(--_1n6oqgd);
  }
  .qf2icr6d {
    border-radius: var(--_1n6oqge);
  }
  .qf2icr6h {
    gap: var(--_1n6oqg0);
  }
  .qf2icr6l {
    gap: var(--_1n6oqg1);
  }
  .qf2icr6p {
    gap: var(--_1n6oqg2);
  }
  .qf2icr6t {
    gap: var(--_1n6oqg3);
  }
  .qf2icr6x {
    gap: var(--_1n6oqg4);
  }
  .qf2icr71 {
    gap: var(--_1n6oqg5);
  }
  .qf2icr75 {
    gap: var(--_1n6oqg6);
  }
  .qf2icr79 {
    gap: var(--_1n6oqg7);
  }
  .qf2icr7d {
    gap: var(--_1n6oqg8);
  }
  .qf2icr7h {
    gap: 0;
  }
  .qf2icr7l {
    padding-top: var(--_1n6oqg0);
  }
  .qf2icr7p {
    padding-top: var(--_1n6oqg1);
  }
  .qf2icr7t {
    padding-top: var(--_1n6oqg2);
  }
  .qf2icr7x {
    padding-top: var(--_1n6oqg3);
  }
  .qf2icr81 {
    padding-top: var(--_1n6oqg4);
  }
  .qf2icr85 {
    padding-top: var(--_1n6oqg5);
  }
  .qf2icr89 {
    padding-top: var(--_1n6oqg6);
  }
  .qf2icr8d {
    padding-top: var(--_1n6oqg7);
  }
  .qf2icr8h {
    padding-top: var(--_1n6oqg8);
  }
  .qf2icr8l {
    padding-top: 0;
  }
  .qf2icr8p {
    padding-bottom: var(--_1n6oqg0);
  }
  .qf2icr8t {
    padding-bottom: var(--_1n6oqg1);
  }
  .qf2icr8x {
    padding-bottom: var(--_1n6oqg2);
  }
  .qf2icr91 {
    padding-bottom: var(--_1n6oqg3);
  }
  .qf2icr95 {
    padding-bottom: var(--_1n6oqg4);
  }
  .qf2icr99 {
    padding-bottom: var(--_1n6oqg5);
  }
  .qf2icr9d {
    padding-bottom: var(--_1n6oqg6);
  }
  .qf2icr9h {
    padding-bottom: var(--_1n6oqg7);
  }
  .qf2icr9l {
    padding-bottom: var(--_1n6oqg8);
  }
  .qf2icr9p {
    padding-bottom: 0;
  }
  .qf2icr9t {
    padding-right: var(--_1n6oqg0);
  }
  .qf2icr9x {
    padding-right: var(--_1n6oqg1);
  }
  .qf2icra1 {
    padding-right: var(--_1n6oqg2);
  }
  .qf2icra5 {
    padding-right: var(--_1n6oqg3);
  }
  .qf2icra9 {
    padding-right: var(--_1n6oqg4);
  }
  .qf2icrad {
    padding-right: var(--_1n6oqg5);
  }
  .qf2icrah {
    padding-right: var(--_1n6oqg6);
  }
  .qf2icral {
    padding-right: var(--_1n6oqg7);
  }
  .qf2icrap {
    padding-right: var(--_1n6oqg8);
  }
  .qf2icrat {
    padding-right: 0;
  }
  .qf2icrax {
    padding-left: var(--_1n6oqg0);
  }
  .qf2icrb1 {
    padding-left: var(--_1n6oqg1);
  }
  .qf2icrb5 {
    padding-left: var(--_1n6oqg2);
  }
  .qf2icrb9 {
    padding-left: var(--_1n6oqg3);
  }
  .qf2icrbd {
    padding-left: var(--_1n6oqg4);
  }
  .qf2icrbh {
    padding-left: var(--_1n6oqg5);
  }
  .qf2icrbl {
    padding-left: var(--_1n6oqg6);
  }
  .qf2icrbp {
    padding-left: var(--_1n6oqg7);
  }
  .qf2icrbt {
    padding-left: var(--_1n6oqg8);
  }
  .qf2icrbx {
    padding-left: 0;
  }
  .qf2icrc1 {
    margin-top: var(--_1n6oqg0);
  }
  .qf2icrc5 {
    margin-top: var(--_1n6oqg1);
  }
  .qf2icrc9 {
    margin-top: var(--_1n6oqg2);
  }
  .qf2icrcd {
    margin-top: var(--_1n6oqg3);
  }
  .qf2icrch {
    margin-top: var(--_1n6oqg4);
  }
  .qf2icrcl {
    margin-top: var(--_1n6oqg5);
  }
  .qf2icrcp {
    margin-top: var(--_1n6oqg6);
  }
  .qf2icrct {
    margin-top: var(--_1n6oqg7);
  }
  .qf2icrcx {
    margin-top: var(--_1n6oqg8);
  }
  .qf2icrd1 {
    margin-top: 0;
  }
  .qf2icrd5 {
    margin-bottom: var(--_1n6oqg0);
  }
  .qf2icrd9 {
    margin-bottom: var(--_1n6oqg1);
  }
  .qf2icrdd {
    margin-bottom: var(--_1n6oqg2);
  }
  .qf2icrdh {
    margin-bottom: var(--_1n6oqg3);
  }
  .qf2icrdl {
    margin-bottom: var(--_1n6oqg4);
  }
  .qf2icrdp {
    margin-bottom: var(--_1n6oqg5);
  }
  .qf2icrdt {
    margin-bottom: var(--_1n6oqg6);
  }
  .qf2icrdx {
    margin-bottom: var(--_1n6oqg7);
  }
  .qf2icre1 {
    margin-bottom: var(--_1n6oqg8);
  }
  .qf2icre5 {
    margin-bottom: 0;
  }
  .qf2icre9 {
    margin-right: var(--_1n6oqg0);
  }
  .qf2icred {
    margin-right: var(--_1n6oqg1);
  }
  .qf2icreh {
    margin-right: var(--_1n6oqg2);
  }
  .qf2icrel {
    margin-right: var(--_1n6oqg3);
  }
  .qf2icrep {
    margin-right: var(--_1n6oqg4);
  }
  .qf2icret {
    margin-right: var(--_1n6oqg5);
  }
  .qf2icrex {
    margin-right: var(--_1n6oqg6);
  }
  .qf2icrf1 {
    margin-right: var(--_1n6oqg7);
  }
  .qf2icrf5 {
    margin-right: var(--_1n6oqg8);
  }
  .qf2icrf9 {
    margin-right: 0;
  }
  .qf2icrfd {
    margin-left: var(--_1n6oqg0);
  }
  .qf2icrfh {
    margin-left: var(--_1n6oqg1);
  }
  .qf2icrfl {
    margin-left: var(--_1n6oqg2);
  }
  .qf2icrfp {
    margin-left: var(--_1n6oqg3);
  }
  .qf2icrft {
    margin-left: var(--_1n6oqg4);
  }
  .qf2icrfx {
    margin-left: var(--_1n6oqg5);
  }
  .qf2icrg1 {
    margin-left: var(--_1n6oqg6);
  }
  .qf2icrg5 {
    margin-left: var(--_1n6oqg7);
  }
  .qf2icrg9 {
    margin-left: var(--_1n6oqg8);
  }
  .qf2icrgd {
    margin-left: 0;
  }
  .qf2icrgh {
    align-items: flex-start;
  }
  .qf2icrgl {
    align-items: center;
  }
  .qf2icrgp {
    align-items: flex-end;
  }
  .qf2icrgt {
    justify-content: flex-start;
  }
  .qf2icrgx {
    justify-content: center;
  }
  .qf2icrh1 {
    justify-content: flex-end;
  }
  .qf2icrh5 {
    justify-content: space-between;
  }
  .qf2icrh9 {
    flex-direction: row;
  }
  .qf2icrhd {
    flex-direction: row-reverse;
  }
  .qf2icrhh {
    flex-direction: column;
  }
  .qf2icrhl {
    flex-direction: column-reverse;
  }
  .qf2icrhp {
    flex-wrap: wrap;
  }
  .qf2icrht {
    flex-wrap: nowrap;
  }
  .qf2icrhx {
    flex-shrink: 0;
  }
  .qf2icri1 {
    flex-grow: 0;
  }
  .qf2icri5 {
    flex-grow: 1;
  }
  .qf2icri9 {
    text-align: left;
  }
  .qf2icrid {
    text-align: center;
  }
  .qf2icrih {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  .qf2icr4y {
    display: none;
  }
  .qf2icr52 {
    display: block;
  }
  .qf2icr56 {
    display: inline;
  }
  .qf2icr5a {
    display: inline-block;
  }
  .qf2icr5e {
    display: flex;
  }
  .qf2icr5i {
    position: relative;
  }
  .qf2icr5m {
    position: absolute;
  }
  .qf2icr5q {
    position: fixed;
  }
  .qf2icr5u {
    border-radius: 0;
  }
  .qf2icr5y {
    border-radius: 9999px;
  }
  .qf2icr62 {
    border-radius: var(--_1n6oqgb);
  }
  .qf2icr66 {
    border-radius: var(--_1n6oqgc);
  }
  .qf2icr6a {
    border-radius: var(--_1n6oqgd);
  }
  .qf2icr6e {
    border-radius: var(--_1n6oqge);
  }
  .qf2icr6i {
    gap: var(--_1n6oqg0);
  }
  .qf2icr6m {
    gap: var(--_1n6oqg1);
  }
  .qf2icr6q {
    gap: var(--_1n6oqg2);
  }
  .qf2icr6u {
    gap: var(--_1n6oqg3);
  }
  .qf2icr6y {
    gap: var(--_1n6oqg4);
  }
  .qf2icr72 {
    gap: var(--_1n6oqg5);
  }
  .qf2icr76 {
    gap: var(--_1n6oqg6);
  }
  .qf2icr7a {
    gap: var(--_1n6oqg7);
  }
  .qf2icr7e {
    gap: var(--_1n6oqg8);
  }
  .qf2icr7i {
    gap: 0;
  }
  .qf2icr7m {
    padding-top: var(--_1n6oqg0);
  }
  .qf2icr7q {
    padding-top: var(--_1n6oqg1);
  }
  .qf2icr7u {
    padding-top: var(--_1n6oqg2);
  }
  .qf2icr7y {
    padding-top: var(--_1n6oqg3);
  }
  .qf2icr82 {
    padding-top: var(--_1n6oqg4);
  }
  .qf2icr86 {
    padding-top: var(--_1n6oqg5);
  }
  .qf2icr8a {
    padding-top: var(--_1n6oqg6);
  }
  .qf2icr8e {
    padding-top: var(--_1n6oqg7);
  }
  .qf2icr8i {
    padding-top: var(--_1n6oqg8);
  }
  .qf2icr8m {
    padding-top: 0;
  }
  .qf2icr8q {
    padding-bottom: var(--_1n6oqg0);
  }
  .qf2icr8u {
    padding-bottom: var(--_1n6oqg1);
  }
  .qf2icr8y {
    padding-bottom: var(--_1n6oqg2);
  }
  .qf2icr92 {
    padding-bottom: var(--_1n6oqg3);
  }
  .qf2icr96 {
    padding-bottom: var(--_1n6oqg4);
  }
  .qf2icr9a {
    padding-bottom: var(--_1n6oqg5);
  }
  .qf2icr9e {
    padding-bottom: var(--_1n6oqg6);
  }
  .qf2icr9i {
    padding-bottom: var(--_1n6oqg7);
  }
  .qf2icr9m {
    padding-bottom: var(--_1n6oqg8);
  }
  .qf2icr9q {
    padding-bottom: 0;
  }
  .qf2icr9u {
    padding-right: var(--_1n6oqg0);
  }
  .qf2icr9y {
    padding-right: var(--_1n6oqg1);
  }
  .qf2icra2 {
    padding-right: var(--_1n6oqg2);
  }
  .qf2icra6 {
    padding-right: var(--_1n6oqg3);
  }
  .qf2icraa {
    padding-right: var(--_1n6oqg4);
  }
  .qf2icrae {
    padding-right: var(--_1n6oqg5);
  }
  .qf2icrai {
    padding-right: var(--_1n6oqg6);
  }
  .qf2icram {
    padding-right: var(--_1n6oqg7);
  }
  .qf2icraq {
    padding-right: var(--_1n6oqg8);
  }
  .qf2icrau {
    padding-right: 0;
  }
  .qf2icray {
    padding-left: var(--_1n6oqg0);
  }
  .qf2icrb2 {
    padding-left: var(--_1n6oqg1);
  }
  .qf2icrb6 {
    padding-left: var(--_1n6oqg2);
  }
  .qf2icrba {
    padding-left: var(--_1n6oqg3);
  }
  .qf2icrbe {
    padding-left: var(--_1n6oqg4);
  }
  .qf2icrbi {
    padding-left: var(--_1n6oqg5);
  }
  .qf2icrbm {
    padding-left: var(--_1n6oqg6);
  }
  .qf2icrbq {
    padding-left: var(--_1n6oqg7);
  }
  .qf2icrbu {
    padding-left: var(--_1n6oqg8);
  }
  .qf2icrby {
    padding-left: 0;
  }
  .qf2icrc2 {
    margin-top: var(--_1n6oqg0);
  }
  .qf2icrc6 {
    margin-top: var(--_1n6oqg1);
  }
  .qf2icrca {
    margin-top: var(--_1n6oqg2);
  }
  .qf2icrce {
    margin-top: var(--_1n6oqg3);
  }
  .qf2icrci {
    margin-top: var(--_1n6oqg4);
  }
  .qf2icrcm {
    margin-top: var(--_1n6oqg5);
  }
  .qf2icrcq {
    margin-top: var(--_1n6oqg6);
  }
  .qf2icrcu {
    margin-top: var(--_1n6oqg7);
  }
  .qf2icrcy {
    margin-top: var(--_1n6oqg8);
  }
  .qf2icrd2 {
    margin-top: 0;
  }
  .qf2icrd6 {
    margin-bottom: var(--_1n6oqg0);
  }
  .qf2icrda {
    margin-bottom: var(--_1n6oqg1);
  }
  .qf2icrde {
    margin-bottom: var(--_1n6oqg2);
  }
  .qf2icrdi {
    margin-bottom: var(--_1n6oqg3);
  }
  .qf2icrdm {
    margin-bottom: var(--_1n6oqg4);
  }
  .qf2icrdq {
    margin-bottom: var(--_1n6oqg5);
  }
  .qf2icrdu {
    margin-bottom: var(--_1n6oqg6);
  }
  .qf2icrdy {
    margin-bottom: var(--_1n6oqg7);
  }
  .qf2icre2 {
    margin-bottom: var(--_1n6oqg8);
  }
  .qf2icre6 {
    margin-bottom: 0;
  }
  .qf2icrea {
    margin-right: var(--_1n6oqg0);
  }
  .qf2icree {
    margin-right: var(--_1n6oqg1);
  }
  .qf2icrei {
    margin-right: var(--_1n6oqg2);
  }
  .qf2icrem {
    margin-right: var(--_1n6oqg3);
  }
  .qf2icreq {
    margin-right: var(--_1n6oqg4);
  }
  .qf2icreu {
    margin-right: var(--_1n6oqg5);
  }
  .qf2icrey {
    margin-right: var(--_1n6oqg6);
  }
  .qf2icrf2 {
    margin-right: var(--_1n6oqg7);
  }
  .qf2icrf6 {
    margin-right: var(--_1n6oqg8);
  }
  .qf2icrfa {
    margin-right: 0;
  }
  .qf2icrfe {
    margin-left: var(--_1n6oqg0);
  }
  .qf2icrfi {
    margin-left: var(--_1n6oqg1);
  }
  .qf2icrfm {
    margin-left: var(--_1n6oqg2);
  }
  .qf2icrfq {
    margin-left: var(--_1n6oqg3);
  }
  .qf2icrfu {
    margin-left: var(--_1n6oqg4);
  }
  .qf2icrfy {
    margin-left: var(--_1n6oqg5);
  }
  .qf2icrg2 {
    margin-left: var(--_1n6oqg6);
  }
  .qf2icrg6 {
    margin-left: var(--_1n6oqg7);
  }
  .qf2icrga {
    margin-left: var(--_1n6oqg8);
  }
  .qf2icrge {
    margin-left: 0;
  }
  .qf2icrgi {
    align-items: flex-start;
  }
  .qf2icrgm {
    align-items: center;
  }
  .qf2icrgq {
    align-items: flex-end;
  }
  .qf2icrgu {
    justify-content: flex-start;
  }
  .qf2icrgy {
    justify-content: center;
  }
  .qf2icrh2 {
    justify-content: flex-end;
  }
  .qf2icrh6 {
    justify-content: space-between;
  }
  .qf2icrha {
    flex-direction: row;
  }
  .qf2icrhe {
    flex-direction: row-reverse;
  }
  .qf2icrhi {
    flex-direction: column;
  }
  .qf2icrhm {
    flex-direction: column-reverse;
  }
  .qf2icrhq {
    flex-wrap: wrap;
  }
  .qf2icrhu {
    flex-wrap: nowrap;
  }
  .qf2icrhy {
    flex-shrink: 0;
  }
  .qf2icri2 {
    flex-grow: 0;
  }
  .qf2icri6 {
    flex-grow: 1;
  }
  .qf2icria {
    text-align: left;
  }
  .qf2icrie {
    text-align: center;
  }
  .qf2icrii {
    text-align: right;
  }
}
.mowtpn4 {
  font-size: var(--mowtpn0);
  line-height: var(--mowtpn1);
}
.mowtpn4:before {
  content: "";
  display: table;
  margin-bottom: var(--mowtpn2);
}
.mowtpn4:after {
  content: "";
  display: table;
  margin-top: var(--mowtpn3);
}
._1c29ox60 {
  font-family: var(--_1n6oqg2w);
}
._1c29ox61 {
  font-weight: var(--_1n6oqg46);
}
._1c29ox62 {
  font-weight: var(--_1n6oqg47);
}
._1c29ox63 {
  font-weight: var(--_1n6oqg48);
}
._1c29ox64 {
  --mowtpn0: var(--_1n6oqg32);
  --mowtpn1: var(--_1n6oqg33);
  --mowtpn2: var(--_1n6oqg35);
  --mowtpn3: var(--_1n6oqg36);
}
._1c29ox67 {
  --mowtpn0: var(--_1n6oqg3c);
  --mowtpn1: var(--_1n6oqg3d);
  --mowtpn2: var(--_1n6oqg3f);
  --mowtpn3: var(--_1n6oqg3g);
}
._1c29ox6a {
  --mowtpn0: var(--_1n6oqg3m);
  --mowtpn1: var(--_1n6oqg3n);
  --mowtpn2: var(--_1n6oqg3p);
  --mowtpn3: var(--_1n6oqg3q);
}
._1c29ox6d {
  --mowtpn0: var(--_1n6oqg3w);
  --mowtpn1: var(--_1n6oqg3x);
  --mowtpn2: var(--_1n6oqg3z);
  --mowtpn3: var(--_1n6oqg40);
}
._1c29ox6g {
  font-size: var(--_1n6oqg32);
  line-height: var(--_1n6oqg33);
}
._1c29ox6h {
  font-size: var(--_1n6oqg3c);
  line-height: var(--_1n6oqg3d);
}
._1c29ox6i {
  font-size: var(--_1n6oqg3m);
  line-height: var(--_1n6oqg3n);
}
._1c29ox6j {
  font-size: var(--_1n6oqg3w);
  line-height: var(--_1n6oqg3x);
}
._1c29ox6k {
  font-weight: var(--_1n6oqg5d);
}
._1c29ox6l {
  font-weight: var(--_1n6oqg5e);
}
._1c29ox6m {
  --mowtpn0: var(--_1n6oqg49);
  --mowtpn1: var(--_1n6oqg4a);
  --mowtpn2: var(--_1n6oqg4c);
  --mowtpn3: var(--_1n6oqg4d);
}
._1c29ox6p {
  --mowtpn0: var(--_1n6oqg4j);
  --mowtpn1: var(--_1n6oqg4k);
  --mowtpn2: var(--_1n6oqg4m);
  --mowtpn3: var(--_1n6oqg4n);
}
._1c29ox6s {
  --mowtpn0: var(--_1n6oqg4t);
  --mowtpn1: var(--_1n6oqg4u);
  --mowtpn2: var(--_1n6oqg4w);
  --mowtpn3: var(--_1n6oqg4x);
}
._1c29ox6v {
  --mowtpn0: var(--_1n6oqg53);
  --mowtpn1: var(--_1n6oqg54);
  --mowtpn2: var(--_1n6oqg56);
  --mowtpn3: var(--_1n6oqg57);
}
html:not(.qf2icr10) ._1c29ox618 {
  --_1c29ox6y: var(--_1n6oqg19);
  --_1c29ox6z: var(--_1n6oqg17);
  --_1c29ox610: var(--_1n6oqg1d);
  --_1c29ox611: var(--_1n6oqg1o);
  --_1c29ox612: var(--_1n6oqg1m);
  --_1c29ox613: var(--_1n6oqg15);
  --_1c29ox614: var(--_1n6oqg1b);
  --_1c29ox615: var(--_1n6oqg1k);
  --_1c29ox616: var(--_1n6oqg1r);
  --_1c29ox617: var(--_1n6oqg1f);
}
html:not(.qf2icr10) ._1c29ox619 {
  --_1c29ox6y: var(--_1n6oqg1a);
  --_1c29ox6z: var(--_1n6oqg18);
  --_1c29ox610: var(--_1n6oqg1e);
  --_1c29ox611: var(--_1n6oqg1p);
  --_1c29ox612: var(--_1n6oqg1n);
  --_1c29ox613: var(--_1n6oqg16);
  --_1c29ox614: var(--_1n6oqg1c);
  --_1c29ox615: var(--_1n6oqg1l);
  --_1c29ox616: var(--_1n6oqg1s);
  --_1c29ox617: var(--_1n6oqg1h);
}
html.qf2icr10 ._1c29ox61a {
  --_1c29ox6y: var(--_1n6oqg19);
  --_1c29ox6z: var(--_1n6oqg17);
  --_1c29ox610: var(--_1n6oqg1d);
  --_1c29ox611: var(--_1n6oqg1o);
  --_1c29ox612: var(--_1n6oqg1m);
  --_1c29ox613: var(--_1n6oqg15);
  --_1c29ox614: var(--_1n6oqg1b);
  --_1c29ox615: var(--_1n6oqg1k);
  --_1c29ox616: var(--_1n6oqg1r);
  --_1c29ox617: var(--_1n6oqg1f);
}
html.qf2icr10 ._1c29ox61b {
  --_1c29ox6y: var(--_1n6oqg1a);
  --_1c29ox6z: var(--_1n6oqg18);
  --_1c29ox610: var(--_1n6oqg1e);
  --_1c29ox611: var(--_1n6oqg1p);
  --_1c29ox612: var(--_1n6oqg1n);
  --_1c29ox613: var(--_1n6oqg16);
  --_1c29ox614: var(--_1n6oqg1c);
  --_1c29ox615: var(--_1n6oqg1l);
  --_1c29ox616: var(--_1n6oqg1s);
  --_1c29ox617: var(--_1n6oqg1h);
}
html:not(.qf2icr10) ._1c29ox61c,
html:not(.qf2icr10) ._1c29ox61d,
html:not(.qf2icr10) ._1c29ox61e,
html:not(.qf2icr10) ._1c29ox61f {
  --_1c29ox615: var(--_1c29ox6y);
}
html:not(.qf2icr10) ._1c29ox61g,
html:not(.qf2icr10) ._1c29ox61h {
  --_1c29ox615: var(--_1c29ox6z);
}
html:not(.qf2icr10) ._1c29ox61i {
  --_1c29ox615: var(--_1c29ox612);
}
html:not(.qf2icr10) ._1c29ox61j {
  --_1c29ox615: var(--_1c29ox610);
}
html:not(.qf2icr10) ._1c29ox61k {
  --_1c29ox615: var(--_1c29ox611);
}
html.qf2icr10 ._1c29ox61l,
html.qf2icr10 ._1c29ox61m,
html.qf2icr10 ._1c29ox61n,
html.qf2icr10 ._1c29ox61o {
  --_1c29ox615: var(--_1c29ox6y);
}
html.qf2icr10 ._1c29ox61p,
html.qf2icr10 ._1c29ox61q {
  --_1c29ox615: var(--_1c29ox6z);
}
html.qf2icr10 ._1c29ox61r {
  --_1c29ox615: var(--_1c29ox612);
}
html.qf2icr10 ._1c29ox61s {
  --_1c29ox615: var(--_1c29ox610);
}
html.qf2icr10 ._1c29ox61t {
  --_1c29ox615: var(--_1c29ox611);
}
._1c29ox61u {
  color: var(--_1c29ox6y);
}
._1c29ox61v {
  color: var(--_1c29ox6z);
}
._1c29ox61w {
  color: var(--_1c29ox610);
}
._1c29ox61x {
  color: var(--_1c29ox611);
}
._1c29ox61y {
  color: var(--_1c29ox612);
}
._1c29ox61z {
  color: var(--_1c29ox613);
}
._1c29ox620 {
  color: var(--_1c29ox614);
}
._1c29ox621 {
  color: var(--_1c29ox615);
}
._1c29ox622 {
  color: var(--_1c29ox616);
}
._1c29ox623 {
  color: var(--_1c29ox617);
}
._1c29ox624 {
  padding-bottom: calc((var(--_1n6oqg9) - var(--_1n6oqg33)) / 2);
  padding-top: calc((var(--_1n6oqg9) - var(--_1n6oqg33)) / 2);
}
._1c29ox625 {
  padding-bottom: calc((var(--_1n6oqg9) - var(--_1n6oqg3d)) / 2);
  padding-top: calc((var(--_1n6oqg9) - var(--_1n6oqg3d)) / 2);
}
._1c29ox626 {
  padding-bottom: calc((var(--_1n6oqg9) - var(--_1n6oqg3n)) / 2);
  padding-top: calc((var(--_1n6oqg9) - var(--_1n6oqg3n)) / 2);
}
._1c29ox627 {
  padding-bottom: calc((var(--_1n6oqg9) - var(--_1n6oqg3x)) / 2);
  padding-top: calc((var(--_1n6oqg9) - var(--_1n6oqg3x)) / 2);
}
@media screen and (min-width: 740px) {
  ._1c29ox64 {
    --mowtpn0: var(--_1n6oqg37);
    --mowtpn1: var(--_1n6oqg38);
    --mowtpn2: var(--_1n6oqg3a);
    --mowtpn3: var(--_1n6oqg3b);
  }
  ._1c29ox67 {
    --mowtpn0: var(--_1n6oqg3h);
    --mowtpn1: var(--_1n6oqg3i);
    --mowtpn2: var(--_1n6oqg3k);
    --mowtpn3: var(--_1n6oqg3l);
  }
  ._1c29ox6a {
    --mowtpn0: var(--_1n6oqg3r);
    --mowtpn1: var(--_1n6oqg3s);
    --mowtpn2: var(--_1n6oqg3u);
    --mowtpn3: var(--_1n6oqg3v);
  }
  ._1c29ox6d {
    --mowtpn0: var(--_1n6oqg41);
    --mowtpn1: var(--_1n6oqg42);
    --mowtpn2: var(--_1n6oqg44);
    --mowtpn3: var(--_1n6oqg45);
  }
  ._1c29ox6g {
    font-size: var(--_1n6oqg37);
    line-height: var(--_1n6oqg38);
  }
  ._1c29ox6h {
    font-size: var(--_1n6oqg3h);
    line-height: var(--_1n6oqg3i);
  }
  ._1c29ox6i {
    font-size: var(--_1n6oqg3r);
    line-height: var(--_1n6oqg3s);
  }
  ._1c29ox6j {
    font-size: var(--_1n6oqg41);
    line-height: var(--_1n6oqg42);
  }
  ._1c29ox6m {
    --mowtpn0: var(--_1n6oqg4e);
    --mowtpn1: var(--_1n6oqg4f);
    --mowtpn2: var(--_1n6oqg4h);
    --mowtpn3: var(--_1n6oqg4i);
  }
  ._1c29ox6p {
    --mowtpn0: var(--_1n6oqg4o);
    --mowtpn1: var(--_1n6oqg4p);
    --mowtpn2: var(--_1n6oqg4r);
    --mowtpn3: var(--_1n6oqg4s);
  }
  ._1c29ox6s {
    --mowtpn0: var(--_1n6oqg4y);
    --mowtpn1: var(--_1n6oqg4z);
    --mowtpn2: var(--_1n6oqg51);
    --mowtpn3: var(--_1n6oqg52);
  }
  ._1c29ox6v {
    --mowtpn0: var(--_1n6oqg58);
    --mowtpn1: var(--_1n6oqg59);
    --mowtpn2: var(--_1n6oqg5b);
    --mowtpn3: var(--_1n6oqg5c);
  }
  ._1c29ox624 {
    padding-bottom: calc((var(--_1n6oqg9) - var(--_1n6oqg38)) / 2);
    padding-top: calc((var(--_1n6oqg9) - var(--_1n6oqg38)) / 2);
  }
  ._1c29ox625 {
    padding-bottom: calc((var(--_1n6oqg9) - var(--_1n6oqg3i)) / 2);
    padding-top: calc((var(--_1n6oqg9) - var(--_1n6oqg3i)) / 2);
  }
  ._1c29ox626 {
    padding-bottom: calc((var(--_1n6oqg9) - var(--_1n6oqg3s)) / 2);
    padding-top: calc((var(--_1n6oqg9) - var(--_1n6oqg3s)) / 2);
  }
  ._1c29ox627 {
    padding-bottom: calc((var(--_1n6oqg9) - var(--_1n6oqg42)) / 2);
    padding-top: calc((var(--_1n6oqg9) - var(--_1n6oqg42)) / 2);
  }
}
._1efnt1q0 {
  --_1n6oqg0: 24px;
  --_1n6oqg1: 8px;
  --_1n6oqg2: 12px;
  --_1n6oqg3: 16px;
  --_1n6oqg4: 24px;
  --_1n6oqg5: 32px;
  --_1n6oqg6: 48px;
  --_1n6oqg7: 64px;
  --_1n6oqg8: 96px;
  --_1n6oqg9: 48px;
  --_1n6oqga: 4px;
  --_1n6oqgb: 4px;
  --_1n6oqgc: 8px;
  --_1n6oqgd: 16px;
  --_1n6oqge: 24px;
  --_1n6oqgf: #e60278;
  --_1n6oqgg: #f8b1dc;
  --_1n6oqgh: #fdc221;
  --_1n6oqgi: #fee384;
  --_1n6oqgj: #b91e1e;
  --_1n6oqgk: #fb999a;
  --_1n6oqgl: #838fa5;
  --_1n6oqgm: rgba(153, 191, 247, 0.7);
  --_1n6oqgn: #1e47a9;
  --_1n6oqgo: #99bff7;
  --_1n6oqgp: #1d559d;
  --_1n6oqgq: #98c9f1;
  --_1n6oqgr: #2e3849;
  --_1n6oqgt: #eaecf1;
  --_1n6oqgs: #fff;
  --_1n6oqgu: #12784f;
  --_1n6oqgv: #8bdec5;
  --_1n6oqgw: #7f35a9;
  --_1n6oqgx: #e1b2f5;
  --_1n6oqgy: 2px;
  --_1n6oqgz: 4px;
  --_1n6oqg10: 6px;
  --_1n6oqg11: 400px;
  --_1n6oqg12: 660px;
  --_1n6oqg13: 940px;
  --_1n6oqg14: 1280px;
  --_1n6oqg15: #e60278;
  --_1n6oqg16: #f8b1dc;
  --_1n6oqg17: #723d02;
  --_1n6oqg18: #fee384;
  --_1n6oqg19: #b91e1e;
  --_1n6oqg1a: #fb999a;
  --_1n6oqg1b: #1e47a9;
  --_1n6oqg1c: #99bff7;
  --_1n6oqg1d: #1d559d;
  --_1n6oqg1e: #98c9f1;
  --_1n6oqg1f: #2e3849;
  --_1n6oqg1h: #fff;
  --_1n6oqg1g: #2e3849;
  --_1n6oqg1i: #5b2084;
  --_1n6oqg1j: #f0d6fa;
  --_1n6oqg1k: #2e3849;
  --_1n6oqg1l: #fff;
  --_1n6oqg1m: #12784f;
  --_1n6oqg1n: #8bdec5;
  --_1n6oqg1o: #7f35a9;
  --_1n6oqg1p: #e1b2f5;
  --_1n6oqg1q: #e05821;
  --_1n6oqg1r: #5a6881;
  --_1n6oqg1s: hsla(0, 0%, 100%, 0.65);
  --_1n6oqg1t: #fff;
  --_1n6oqg1u: #1c2330;
  --_1n6oqg1v: #051a49;
  --_1n6oqg1w: #e60278;
  --_1n6oqg1x: #cd026b;
  --_1n6oqg1y: #fd0585;
  --_1n6oqg1z: #feeffa;
  --_1n6oqg20: #fdd7f3;
  --_1n6oqg21: #fde3f6;
  --_1n6oqg22: #fdc221;
  --_1n6oqg23: #fef8de;
  --_1n6oqg24: #b91e1e;
  --_1n6oqg25: #a31a1a;
  --_1n6oqg26: #db1616;
  --_1n6oqg27: #ffe3e2;
  --_1n6oqg28: #fef3f3;
  --_1n6oqg29: #fcdbdb;
  --_1n6oqg2a: #fde7e7;
  --_1n6oqg2b: #1e47a9;
  --_1n6oqg2c: #1a3e93;
  --_1n6oqg2d: #2455c9;
  --_1n6oqg2e: #f0f7fe;
  --_1n6oqg2f: #d8eafc;
  --_1n6oqg2g: #e4f1fd;
  --_1n6oqg2h: #1d559d;
  --_1n6oqg2i: #e3f2fb;
  --_1n6oqg2j: #2e3849;
  --_1n6oqg2k: #242c39;
  --_1n6oqg2l: #384459;
  --_1n6oqg2m: #f3f5f7;
  --_1n6oqg2n: #f3f5f7;
  --_1n6oqg2o: #e4e8ed;
  --_1n6oqg2p: #ebeff2;
  --_1n6oqg2q: #12784f;
  --_1n6oqg2r: #e2f7f1;
  --_1n6oqg2s: #7f35a9;
  --_1n6oqg2t: #f9ebfd;
  --_1n6oqg2u: #fff;
  --_1n6oqg2v: #1c2330;
  --_1n6oqg2w: SeekSans, "SeekSans Fallback", Arial, Tahoma, sans-serif;
  --_1n6oqg2x: 783;
  --_1n6oqg2y: 1057;
  --_1n6oqg2z: -274;
  --_1n6oqg30: 0;
  --_1n6oqg31: 1000;
  --_1n6oqg32: 12px;
  --_1n6oqg33: 18.396px;
  --_1n6oqg34: 9.396px;
  --_1n6oqg35: -0.375em;
  --_1n6oqg36: -0.375em;
  --_1n6oqg37: 12px;
  --_1n6oqg38: 18.396px;
  --_1n6oqg39: 9.396px;
  --_1n6oqg3a: -0.375em;
  --_1n6oqg3b: -0.375em;
  --_1n6oqg3c: 14px;
  --_1n6oqg3d: 20.962px;
  --_1n6oqg3e: 10.962px;
  --_1n6oqg3f: -0.3571em;
  --_1n6oqg3g: -0.3571em;
  --_1n6oqg3h: 14px;
  --_1n6oqg3i: 20.962px;
  --_1n6oqg3j: 10.962px;
  --_1n6oqg3k: -0.3571em;
  --_1n6oqg3l: -0.3571em;
  --_1n6oqg3m: 16px;
  --_1n6oqg3n: 24.528px;
  --_1n6oqg3o: 12.528px;
  --_1n6oqg3p: -0.375em;
  --_1n6oqg3q: -0.375em;
  --_1n6oqg3r: 16px;
  --_1n6oqg3s: 24.528px;
  --_1n6oqg3t: 12.528px;
  --_1n6oqg3u: -0.375em;
  --_1n6oqg3v: -0.375em;
  --_1n6oqg3w: 18px;
  --_1n6oqg3x: 27.094px;
  --_1n6oqg3y: 14.094px;
  --_1n6oqg3z: -0.3611em;
  --_1n6oqg40: -0.3611em;
  --_1n6oqg41: 18px;
  --_1n6oqg42: 27.094px;
  --_1n6oqg43: 14.094px;
  --_1n6oqg44: -0.3611em;
  --_1n6oqg45: -0.3611em;
  --_1n6oqg46: 400;
  --_1n6oqg47: 500;
  --_1n6oqg48: 700;
  --_1n6oqg49: 28px;
  --_1n6oqg4a: 32.924px;
  --_1n6oqg4b: 21.924px;
  --_1n6oqg4c: -0.1964em;
  --_1n6oqg4d: -0.1964em;
  --_1n6oqg4e: 36px;
  --_1n6oqg4f: 42.188px;
  --_1n6oqg4g: 28.188px;
  --_1n6oqg4h: -0.1944em;
  --_1n6oqg4i: -0.1944em;
  --_1n6oqg4j: 24px;
  --_1n6oqg4k: 29.792px;
  --_1n6oqg4l: 18.792px;
  --_1n6oqg4m: -0.2292em;
  --_1n6oqg4n: -0.2292em;
  --_1n6oqg4o: 30px;
  --_1n6oqg4p: 36.49px;
  --_1n6oqg4q: 23.49px;
  --_1n6oqg4r: -0.2167em;
  --_1n6oqg4s: -0.2167em;
  --_1n6oqg4t: 22px;
  --_1n6oqg4u: 27.226px;
  --_1n6oqg4v: 17.226px;
  --_1n6oqg4w: -0.2273em;
  --_1n6oqg4x: -0.2273em;
  --_1n6oqg4y: 24px;
  --_1n6oqg4z: 29.792px;
  --_1n6oqg50: 18.792px;
  --_1n6oqg51: -0.2292em;
  --_1n6oqg52: -0.2292em;
  --_1n6oqg53: 20px;
  --_1n6oqg54: 24.66px;
  --_1n6oqg55: 15.66px;
  --_1n6oqg56: -0.225em;
  --_1n6oqg57: -0.225em;
  --_1n6oqg58: 20px;
  --_1n6oqg59: 24.66px;
  --_1n6oqg5a: 15.66px;
  --_1n6oqg5b: -0.225em;
  --_1n6oqg5c: -0.225em;
  --_1n6oqg5d: 400;
  --_1n6oqg5e: 500;
  --_1n6oqg5f: underline;
  --_1n6oqg5g: 24px;
  --_1n6oqg5h: 20px;
  --_1n6oqg5i: transform 0.125s ease, opacity 0.125s ease;
  --_1n6oqg5j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_1n6oqg5k: scale(0.95);
  --_1n6oqg5l: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --_1n6oqg5m: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --_1n6oqg5n: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
.vyywpy6 {
  background: var(--vyywpy0);
}
.vyywpy7 {
  background: var(--vyywpy1);
}
.vyywpy8 {
  background: var(--vyywpy2);
}
.vyywpy9 {
  background: var(--vyywpy3);
}
.vyywpya {
  background: var(--vyywpy4);
}
.vyywpyb {
  background: var(--vyywpy5);
}
html:not(.qf2icr10) .vyywpyc {
  --vyywpy0: var(--_1n6oqgw);
  --vyywpy1: var(--_1n6oqgp);
  --vyywpy2: var(--_1n6oqgu);
  --vyywpy3: var(--_1n6oqgh);
  --vyywpy4: var(--_1n6oqgj);
  --vyywpy5: var(--_1n6oqgn);
}
html:not(.qf2icr10) .vyywpyd {
  --vyywpy0: var(--_1n6oqgx);
  --vyywpy1: var(--_1n6oqgq);
  --vyywpy2: var(--_1n6oqgv);
  --vyywpy3: var(--_1n6oqgi);
  --vyywpy4: var(--_1n6oqgk);
  --vyywpy5: var(--_1n6oqgo);
}
html.qf2icr10 .vyywpye {
  --vyywpy0: var(--_1n6oqgw);
  --vyywpy1: var(--_1n6oqgp);
  --vyywpy2: var(--_1n6oqgu);
  --vyywpy3: var(--_1n6oqgh);
  --vyywpy4: var(--_1n6oqgj);
  --vyywpy5: var(--_1n6oqgn);
}
html.qf2icr10 .vyywpyf {
  --vyywpy0: var(--_1n6oqgx);
  --vyywpy1: var(--_1n6oqgq);
  --vyywpy2: var(--_1n6oqgv);
  --vyywpy3: var(--_1n6oqgi);
  --vyywpy4: var(--_1n6oqgk);
  --vyywpy5: var(--_1n6oqgo);
}
.vyywpyg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
.vyywpyh {
  width: var(--_1n6oqge);
}
.vyywpyi {
  width: var(--_1n6oqga);
}
._6mqlwy0 {
  margin-bottom: -0.1em;
}
._6mqlwy2 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
._6mqlwy0 ._6mqlwy2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  ._6mqlwy4 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--_6mqlwy3);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.sprinkles_darkMode__qf2icr10,html.sprinkles_darkMode__qf2icr10 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="seekJobs_seekJobs__1efnt1q0 typography_lightModeTone_light__1c29ox618 typography_darkModeTone_dark__1c29ox61b">
+        <div class="reset_base__natd190 sprinkles_paddingBottom_gutter_mobile__qf2icr8n sprinkles_paddingTop_gutter_mobile__qf2icr7j sprinkles_paddingLeft_gutter_mobile__qf2icrav sprinkles_paddingRight_gutter_mobile__qf2icr9r sprinkles_position_relative_mobile__qf2icr5f sprinkles_borderRadius_large_mobile__qf2icr67 sprinkles_textAlign_left_mobile__qf2icri7 sprinkles_boxShadow_borderNeutralLight_lightMode__qf2icr4j sprinkles_boxShadow_borderNeutral_darkMode__qf2icr4c typography_lightModeTone_light__1c29ox618 typography_darkModeTone_dark__1c29ox61b sprinkles_background_surface_lightMode__qf2icr33 sprinkles_background_surfaceDark_darkMode__qf2icr36">
+          <span class="reset_base__natd190 sprinkles_display_block_mobile__qf2icr4z typography_fontFamily__1c29ox60 typography_fontWeight_regular__1c29ox61 typography_tone_neutral__1c29ox621 capsize_capsizeStyle__mowtpn4 typography_textSize_large__1c29ox6d">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
